# appbundle

./: .cmake-format.py  .gitignore  CMakeLists.txt  LICENSE  README.md  conanfile.py  developer.yaml
cmake/Modules/: CompilerConfig.cmake
cmake/Modules/Compilers/: GNUConfig.cmake
conda/: build.sh  meta.yaml
framework/: CMakeLists.txt
framework/bindings/python/: CMakeLists.txt  setup.py
framework/bindings/python/framework/: CMakeLists.txt  __init__.py  _core.cpp
framework/core/: CMakeLists.txt  version.cpp  version.hpp
framework/core/src/: version.cpp  version.hpp
qt/: CMakeLists.txt
qt/widgets/: CMakeLists.txt
qt/widgets/src/: frameworkaboutwidget.cpp  frameworkaboutwidget.hpp
